--- a/template-test.yml
+++ b/template-test.yml
@@ -12,7 +12,7 @@ resources:
   repositories:
     - repository: self
     - repository: devops
-      name: arquitetura-templates
+      name: ArtemiSec/arquitetura-templates
       type: git
       endpoint: template-test
 
