Update veracode-pipelines.yml for Azure Pipelines

--- a/veracode-pipelines.yml
+++ b/veracode-pipelines.yml
@@ -15,7 +15,7 @@ steps:
     ConnectionDetailsSelection: 'Service Connection'
     veracodeAppProfile: '$(system.teamProject)'
     version: '$(build.buildNumber)'
-    filepath: '$(build.artifactstagingdirectory)'
+    filepath: '$(build.artifactstagingdirectory)/src'
     createProfile: true
     importResults: true
     maximumWaitTime: '360'
