--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,9 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - checkout: self
-    - bash: docker run -e SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN) --rm -v "${PWD}:/$(system.teamProject)" returntocorp/semgrep semgrep ci
-    
+    #- bash: docker run -e SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN) --rm -v "${PWD}:/$(system.teamProject)" returntocorp/semgrep semgrep ci
+    - bash: python -m pip install semgrep
+    - bash: semgrep ci
     #- bash: docker build -t defect .
     #   displayName: 'Build Image'
 
