--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ stages:
     - checkout: self
     #- bash: docker run -e SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN) --rm -v "${PWD}:/$(system.teamProject)" returntocorp/semgrep semgrep ci
     - bash: python -m pip install semgrep
+    - bash: export SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN)
     - bash: semgrep ci
     #- bash: docker build -t defect .
     #   displayName: 'Build Image'
