--- a/template-test.yml
+++ b/template-test.yml
@@ -28,4 +28,4 @@ stages:
 
   # - template: templates/sast/semgrep.yml@devops
   
-  # - template: templates/sast/depscan.yml@devops
+  - template: templates/sast/depscan.yml@devops
