--- a/template-test.yml
+++ b/template-test.yml
@@ -29,3 +29,4 @@ stages:
   # - template: templates/sast/semgrep.yml@devops
   
   - template: templates/sast/depscan.yml@devops
+  - template: templates/sast/dependencycheck.yml@devops
