Update template-test.yml for Azure Pipelines

--- a/template-test.yml
+++ b/template-test.yml
@@ -28,5 +28,5 @@ stages:
 
   # - template: templates/sast/semgrep.yml@devops
   
-  # - template: templates/sast/depscan.yml@devops
+  - template: templates/sast/depscan.yml@devops
   - template: templates/sast/dependencycheck.yml@devops
