--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,10 +25,12 @@ steps:
     failOnIssues: false
     projectName: '$(Build.Repository.Name)-snyk'
     organization: '70513e27-0428-4701-8e24-11cf8186e55d'
+- script: docker build -t snyk .
 - task: SnykSecurityScan@1
   inputs:
     serviceConnectionEndpoint: 'snyk-conn'
     testType: 'container'
+    dockerImageName: 'snyk'
     dockerfilePath: '$(Build.Repository.Name)/Dockerfile'
     monitorWhen: 'always'
     failOnIssues: false
