Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,29 +9,29 @@ stages:
     steps:
     - checkout: self
     #- bash: docker run -e SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN) --rm -v "${PWD}:/$(system.teamProject)" returntocorp/semgrep semgrep ci
-    - bash: python -m pip install semgrep
-    - bash: export SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN)
-    - bash: semgrep ci
+    # - bash: python -m pip install semgrep
+    # - bash: export SEMGREP_APP_TOKEN=$(SEMGREP_APP_TOKEN)
+    # - bash: semgrep ci
     #- bash: docker build -t defect .
     #   displayName: 'Build Image'
 
     # - bash: docker run -d -p 3000:3000 defect
     #   displayName: 'App Container'
 
-    # - task: SonarCloudPrepare@1
-    #   inputs:
-    #     SonarCloud: 'SonarCloud'
-    #     organization: 'allantests'
-    #     scannerMode: 'CLI'
-    #     configMode: 'file'
+    - task: SonarCloudPrepare@1
+      inputs:
+        SonarCloud: 'SonarCloud'
+        organization: 'allantests'
+        scannerMode: 'CLI'
+        configMode: 'file'
 
-    # - task: SonarCloudAnalyze@1
-    #   inputs:
-    #     jdkversion: 'JAVA_HOME_17_X64'
+    - task: SonarCloudAnalyze@1
+      inputs:
+        jdkversion: 'JAVA_HOME_17_X64'
 
-    # - task: SonarCloudPublish@1
-    #   inputs:
-    #     pollingTimeoutSec: '600'
+    - task: SonarCloudPublish@1
+      inputs:
+        pollingTimeoutSec: '600'
 
     # - task: owaspzap@1
     #   inputs:
