--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,7 @@ stages:
         organization: 'allantests'
         scannerMode: 'CLI'
         configMode: 'file'
+        extraProperties: 'sonar.report.export.path=report.json'
 
     - task: SonarCloudAnalyze@1
       inputs:
@@ -32,7 +33,13 @@ stages:
     - task: SonarCloudPublish@1
       inputs:
         pollingTimeoutSec: '600'
-
+    - task: PublishPipelineArtifact@1
+      inputs:
+          targetPath: '$(Agent.TempDirectory)/sonar/$(Build.BuildNumber)/**/report.json'
+          artifact: 'sonar-json'
+          publishLocation: 'pipeline'
+    - script: ls -lha $(Agent.TempDirectory)/sonar/$(Build.BuildNumber)
+      
     # - task: owaspzap@1
     #   inputs:
     #     aggressivemode: true
