Update trivy.yml for Azure Pipelines

--- a/trivy.yml
+++ b/trivy.yml
@@ -17,12 +17,9 @@ steps:
     version: 'latest'
     path: '.'
     exitCode: '0'
-- script: ls -lha
-- script: ls -lha $(Build.ArtifactStagingDirectory)
-- script: ls -lha $(Build.SourcesDirectory)
 - script: ls -lha /tmp/
 - task: PublishPipelineArtifact@1
   inputs:
-      targetPath: '**/*/trivy-results-**.json'
+      targetPath: '/tmp/trivy-**'
       artifact: 'trivy-files'
       publishLocation: 'pipeline'
