Update trivy.yml for Azure Pipelines

--- a/trivy.yml
+++ b/trivy.yml
@@ -20,6 +20,6 @@ steps:
 - script: ls -lha /tmp/
 - task: PublishPipelineArtifact@1
   inputs:
-      targetPath: '/tmp/trivy-**/*.json'
+      targetPath: '/tmp/trivy-*.json'
       artifact: 'trivy-files'
       publishLocation: 'pipeline'
